Kubernetes/jenkins/svc-jenkins-old.yml
apiVersion: v1
kind: Service
metadata:
  name: ap-jenkins-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external 
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
  namespace: ap-netflix-jenkins
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: ap-netflix-jenkins
