Kubernetes/jenkins/svc-jenkins.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ap-netflix-jenkins
  name: ap-cip-jenkins
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ap-netflix-jenkins
