Kubernetes/jenkins/ingress-jenkins.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ap-ingress-svc
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ap-cip-jenkins 
            port:
              number: 8080
